ProjetCompil/Verif/Test/fail/if.cas
program
	A : real;
begin
	if (A) then
		null;
	end;
	
end.